# stackai-vector-db

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  env.example  pyproject.toml
app/: main.py
app/api/v1/: deps.py  errors.py
app/api/v1/routers/: __init__.py  chunks.py  documents.py  health.py  libraries.py  search.py
app/clients/: __init__.py  embedding.py
app/core/: config.py  constants.py  logging.py
app/domain/: __init__.py  entities.py  errors.py
app/indexes/: __init__.py  base.py  ivf.py  kdtree.py  linear.py  manager.py
app/repositories/: ports.py
app/repositories/in_memory/: __init__.py  chunk_repository.py  document_repository.py  library_repository.py  rwlock.py
app/schemas/: __init__.py  chunk.py  document.py  errors.py  health.py  index.py  library.py  search.py
app/services/: __init__.py  chunk_service.py  document_service.py  index_service.py  library_service.py  search_service.py
app/utils/: __init__.py  rwlock.py  validation.py
tests/: conftest.py  test_chunk_repository.py  test_chunk_schemas.py  test_chunk_service.py  test_chunks.py  test_chunks_api.py  test_concurrency.py  test_config.py  test_document_repository.py  test_document_schemas.py  test_document_service.py  test_documents.py  test_documents_api.py  test_embedding_client.py  test_health.py  test_index_service.py  test_indexes.py  test_libraries.py  test_library_repository.py  test_library_service.py  test_library_service_cascade.py  test_logging.py  test_main.py  test_schemas.py  test_search_endpoints.py  test_search_service.py
